# real-time-ML-crypto

./: .gitignore  readme.md
docker-compose/: Makefile  backfill_pipline.yml  feature_pipeline.yml
services/feature_dash/: Makefile  pyproject.toml
services/feature_dash/src/: config.py  frontend.py
services/kafka_to_feature_store/: .env.docker  Dockerfile  Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_features.py  main.py  manual_ingest_test.py  pushcsv.py
services/predictor/: pyproject.toml
services/predictor/src/: data_preprocessing.py  pac_features_engineering.py
services/trade_producer/: Dockerfile  Makefile  historical_trades_settings.sh  live_trades_settings.sh  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main-rdpnd.py  main.py  test_type_hints.py
services/trade_producer/src/kraken_api/: restapi.py  restapi_v0  trade.py  websocket.py
services/trade_to_ohlc/: .env.docker  Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
utility_functions_data/: pyproject.toml
utility_functions_data/src/: ohlc_data_reader.py  ohlc_data_writer.py
