[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["TJ4519 <tejasbirsingh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^2.8.0"
pytest = "^8.3.2"
websocket = "^0.2.1"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
