[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["TJ4519 <tejasbirsingh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
quixstreams = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
